# wasm-learning

asura/: Cargo.toml
asura/src/: bindings.rs  lib.rs
asura/wit/: world.wit
plugin-exec/: Cargo.toml  asura.wasm  plugin-exec
plugin-exec/src/: main.rs
vt-plugin/: Cargo.toml
vt-plugin/src/: lib.rs
vt-plugin/src/utils/: mod.rs  plugin_error.rs
vt-plugin/wit/: world.wit
